fixed text align of h2 for mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -102,10 +102,14 @@ div.headerimg>img{
 .page-section#friquiwhat{
     padding-top:50px !important;
 }
+#pagecontainer {
+    p{
+        text-align:justify;
+    }
+}
 #pagecontainer>div{
     margin-top: 0px;
     margin-bottom: 80px;
-    text-align:justify;
 }
 
 .text-muted{
